--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -1,3 +1,5 @@
+
+
 .wrapper {
     position: relative;
     width: 420px;
@@ -12,6 +14,13 @@
     align-items: center;
     transition: height 0.2s ease;
     overflow: hidden;
+    
+    background: linear-gradient(to bottom, #000000, #222222, #000000);
+    min-height: 80vh;
+
+    
+     
+
   }
   .wrapper.active {
     height: 520px;
